<resources>
    <string name="app_name"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings of Sign-up-->
    <string name="text_signup_title1">Get Started</string>
    <string name="text_signup_title2">Let us create your account</string>
    <string name="text_signup_description">Please tell a bit aout yourself for personalized experience</string>
    <string name="text_btn_signup_student">Student</string>
    <string name="text_btn_signup_teacher">Teacher</string>
    <string name="text_hint_signup_school_name">School Name</string>
    <string name="text_hint_signup_school_name_mandatory">School Name*</string>
    <string name="text_hint_signup_name">Name*</string>
    <string name="text_hint_signup_email">E-mail*</string>
    <string name="text_hint_signup_password">Password*</string>
    <string name="text_btn_signup">Sign Up</string>
    <string name="text_signup_login_text">Already have an account?</string>
    <string name="text_btn_signup_login">Sign In</string>
    <string name="text_hint_signup_age">Age*</string>
    <string name="text_hint_signup_mentor_name">Mentor\'s name</string>

    <!--Strings of Recommendation screen-->
    <string name="text_recommendation_title">RECOMMENDATIONS</string>
    <string name="text_recommendation_description">Help us personalize better, Please select area of interest</string>
    <string name="text_btn_recommendation">Done</string>

    <!--Strings of Log in screen-->
    <string name="text_login_title">Sign In</string>
    <string name="text_login_new_user_text">Don\'t have an account?</string>
    <string name="text_login_new_user">Sign Up</string>
    <string name="text_btn_login">Sign In</string>

    <!--Strings of Home screen-->
    <string name="text_home">Home</string>
    <string name="text_home_search">What\'s in</string>
    <string name="text_home_post">Post</string>
    <string name="text_home_profile">My Profile</string>
    <string name="text_home_message">Message</string>

    <!--Strings of Search screen-->
    <string name="text_search_title">What\'s In</string>

    <!--Strings of Post screen-->
    <string name="text_btn_post_rotate">Rotate</string>
    <string name="text_btn_post_flash">Flash</string>

    <!--Strings of Profile screen-->
    <string name="text_profile_my_wall">My wall</string>
    <string name="text_profile_follower">Followers</string>
    <string name="text_profile_following">Following</string>

    <string name="title_home">HOME</string>
    <string name="title_search">WHAT\'S IN</string>
    <string name="title_moderator">APPROVAL</string>
    <string name="title_post">POST</string>
    <string name="title_profile">PROFILE</string>

    <!--Strings of Post screen-->
    <string name="text_post_hint_caption">Write a caption here</string>
    <string name="text_post_btn_send_mentor">Send to mentor</string>

    <!--Strings of VideoRecording screen-->
    <string name="error_text_low_light">Low Light</string>
    <string name="error_text_device_shaky">Device is too shaky</string>
    <string name="error_text_minimum_time">Record for minimum %1$d seconds to proceed</string>
    <string name="error_text_time_left">10 seconds left for recording</string>
    <string name="text_camera_flip">Flip</string>
    <string name="text_camera_flash">Flash</string>
    <string name="text_camera_mute">mute</string>
    <string name="text_warn_video_recording_speed">Please record video slowly</string>
    <string name="text_warn_video_recording_light">Please improve lightening condition</string>
    <string name="text_tap_to_Record">Tap to record</string>
    <string name="error_string">HTTP 400 Bad Request</string>
    <string name="alternate_error_string">Unable to process this request, Please try later</string>

    <string name="text_moderator_desc">Please check the followinng videos, \n Videos will be posted after you approval</string>


    <!--Strings of VideoRecording screen-->
<string name="recorder_view_title">Please watch full video before posting</string>

    <string-array name="school_array">
        <item>Select School</item>
        <item>DAV School</item>
        <item>DPS</item>
        <item>Convent School</item>
        <item>Army Public School</item>
    </string-array>


</resources>
