<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.profile.ProfileFragment">

 <ProgressBar
     android:id="@+id/progress"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"/>

   <androidx.appcompat.widget.AppCompatImageView
       android:id="@+id/profile_pic"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:src="@drawable/oval"
       android:scaleType="fitXY"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/follower_count"
        app:layout_constraintTop_toTopOf="@+id/profile_pic"
        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
        app:layout_constraintLeft_toRightOf="@+id/profile_pic"
        app:layout_constraintRight_toLeftOf="@+id/following_count"
        android:text="0"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/follower_text"
        app:layout_constraintLeft_toLeftOf="@+id/follower_count"
        app:layout_constraintTop_toBottomOf="@+id/follower_count"
        app:layout_constraintRight_toRightOf="@+id/follower_count"
        android:text="@string/text_profile_follower"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/following_count"
        app:layout_constraintTop_toTopOf="@+id/profile_pic"
        app:layout_constraintLeft_toRightOf="@+id/follower_count"
        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
        app:layout_constraintRight_toRightOf="parent"
        android:text="0"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/following_text"
        app:layout_constraintTop_toBottomOf="@+id/following_count"
        app:layout_constraintLeft_toLeftOf="@+id/following_count"
        app:layout_constraintRight_toRightOf="@+id/following_count"
        android:text="@string/text_profile_following"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_wall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/text_profile_my_wall"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_wall"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="0dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>