<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".presentation.view.bottomnavigation.BottomNavigationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:elevation="2dp"
        app:titleTextColor="@color/dark_teal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@android:color/white" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintBottom_toTopOf="@+id/tv_home"
       app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_browser" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/text_home"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintLeft_toLeftOf="@+id/iv_home"
        app:layout_constraintRight_toRightOf="@+id/iv_home"
        app:layout_constraintTop_toBottomOf="@+id/iv_home"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_search"
        app:layout_constraintLeft_toRightOf="@+id/iv_home"
        app:layout_constraintRight_toLeftOf="@+id/iv_post"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/ic_search_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/text_home_search"
        android:textColor="@android:color/white"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintLeft_toLeftOf="@id/iv_search"
        app:layout_constraintRight_toRightOf="@+id/iv_search"
        app:layout_constraintTop_toBottomOf="@+id/iv_search"
         />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="@+id/background"
        app:layout_constraintRight_toRightOf="@+id/background"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:srcCompat="@drawable/ic_home_plus" />

    <View
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"

        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintLeft_toRightOf="@+id/iv_post"
        app:layout_constraintRight_toLeftOf="@+id/iv_profile"
        app:srcCompat="@drawable/ic_comment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/text_home_message"
        android:textColor="@android:color/white"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"

        app:layout_constraintLeft_toLeftOf="@+id/iv_message"
        app:layout_constraintRight_toRightOf="@+id/iv_message"
        app:layout_constraintTop_toBottomOf="@+id/iv_message"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintLeft_toRightOf="@+id/iv_message"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/text_home_profile"
        app:layout_constraintBottom_toBottomOf="@+id/background"

        android:textColor="@android:color/white"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_profile"
        app:layout_constraintRight_toRightOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>